<resources>
    <string name="app_name">Amorfar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="elegir_menu">Elegi tu menu</string>
    <string name="crear_menu">Crear menu</string>
    <string name="informe">Informe</string>
    <string name="usuario">Usuario</string>
    <string name="clave">clave</string>
    <string name="repetir_clave">Repetir clave</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_crear_menu">CrearMenuActivity</string>
    <string name="recordar_sesion">Recordar sesion</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="title_activity_crear_usuario">CrearUsuarioActivity</string>
    <string name="listo">Listo</string>
    <string name="nombre_usuario_no_valido">El nombre de usuario debe ser mayor a 5 caracteres</string>
    <string name="clave_no_valida">La clave debe ser mayor a 4 caracteres</string>
    <string name="claves_no_coinciden">Las claves no coinciden</string>
    <string name="usuario_creado_con_exito">Usuario creado!</string>
    <string name="clave_no_correcta">La clave ingresada no es correcta</string>
    <string name="nuevo_plato">+  Nuevo plato</string>
    <string name="cantidad_de_platos">Cantidad de platos</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="confirmar_minusc">Confirmar</string>
    <string name="title_activity_seleccion_plato">SeleccionPlatoActivity</string>
    <string name="nombre_plato">Nombre del plato</string>
    <string name="crear">Crear</string>
    <string name="plato_existente">El plato ya existe</string>
    <string name="nombre_plato_invalido">El nombre del plato deve ser mayor a 3 caracteres</string>
    <string name="nombre_pepe">pepelotas de humo</string>
    <string name="error_al_guardar_plato">Error, el plato no fue guardado</string>
    <string name="elija_plato">Toque para elejir un plato</string>
    <string name="title_activity_seleccion_multiples_platos">SeleccionMultiplesPlatos</string>
    <string name="platos_restantes_a_elejir">Platos restantes:</string>
    <string name="menu_cancelado">Menu cancelado</string>
    <string name="enviar">Enviar</string>
    <string name="enviar_voto">Enviar Voto</string>
    <string name="title_activity_elejir_menu">ElejirMenuActivity</string>
    <string name="cantidad_de_invitados">Cantidad de invitados</string>
    <string name="invitados">Invitados:</string>
    <string name="no_como">No, gracias</string>
    <string name="texto_comserva_premio">Conserva el premio :)</string>
    <string name="texto_no_conserva_premio">Esta semana no hay premio :(</string>
    <string name="title_activity_informe">InformeActivity</string>
    <string name="title_activity_lista_de_premios">ListaDePremiosActivity</string>
    <string name="reiniciar_premios">Reiniciar premios</string>
    <string name="comensales_premiados">Premiados:</string>
    <string name="desea_reiniciar_premiados">¿Reiniciar lista de premiados?</string>
    <string name="cancelar">Cancelar</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="lista_de_premiados">Lista de premiados</string>
    <string name="powered_by_altosoft">Powered by Altosoft</string>
    <string name="Altosoft">Altosoft</string>
    <string name="soy_admin">Soy admin!</string>
    <string name="clave_administrador">Clave admin</string>
    <string name="cerrar">Cerrar</string>
    <string name="usuario_no_autorizado">Usuario no autorizado</string>
    <string name="no_votaron">No votaron</string>
    <string name="no_comen">Invitados</string>
    <string name="total_aproximado">Total aproximado:</string>
    <string name="cuidado">Cuidado!</string>
    <string name="advertencia_mensaje">Votaste despues de la hora permitida. Esta semana no hay premio :(</string>
    <string name="entendido">Entendido</string>
    <string name="no_come_pero_lleva_invitados">Usted no come pero va con invitados.</string>
    <string name="seguro">¿Seguro?</string>

    <string name="sobre_altosoft">UNTREF \n Analisis y disenio estructurado</string>
    <string name="title_activity_informe_tabs">InformeTabs</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_informe_activity_tabs">INFORME</string>


</resources>
