<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.altosoftuntref.amorfar.CrearUsuarioActivity"
    android:background="#ffdeffe9">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout3">

        <EditText
            android:layout_width="@dimen/ancho_standard"
            android:layout_height="wrap_content"
            android:id="@+id/editText_crearUsuario_usuario"
            android:hint="@string/usuario"/>

        <EditText
            android:layout_width="@dimen/ancho_standard"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_crearUsuario_clave"
            android:hint="@string/clave"/>
        <EditText
            android:layout_width="@dimen/ancho_standard"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_crearUsuario_claveRepetida"
            android:hint="@string/repetir_clave"/>

        <EditText
            android:layout_width="@dimen/ancho_standard"
            android:layout_height="wrap_content"
            android:hint="@string/clave_administrador"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_crearUSuario_claveAdminMaestra" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/ancho_standard"
            android:layout_height="wrap_content"
            android:text="@string/listo"
            android:id="@+id/button_crearUsuario_listo"
            android:background="#ffb0cbff"
            android:onClick="guardarClick" />

        <TextView
            android:layout_width="@dimen/ancho_standard"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView_crearUsuario_mensaje"
            android:textColor="#ffff5a5b" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soy_admin"
        android:id="@+id/checkBox_crearUsuario_soyAdmin"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_alignStart="@+id/linearLayout3"
        android:onClick="onCheckboxClicked"/>

</RelativeLayout>
