<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.altosoftuntref.amorfar.InformeActivity"
android:background="#fffffee8">

<!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--android:text="Large Text"-->
    <!--android:id="@+id/textView_nombreUsuario"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="20dp" />-->

<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true">

    <Button
        android:text="@string/crear_menu"
        android:id="@+id/button_listaDePremios_mostrarListaPremios"
        style="@style/boton_grande"
        android:background="#fff5beff"
        android:onClick="irAListaDePremios"/>

    <Button
        android:text="@string/elegir_menu"
        android:id="@+id/button_elegirMenu"
        style="@style/boton_grande"
        android:background="#ff99ffb0"/>

    <Button
        android:text="@string/informe"
        android:id="@+id/button_mostrarInforme"
        style="@style/boton_grande"
        android:background="#ffacffee" />
</LinearLayout>

</RelativeLayout>