<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="#fffffee8">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">

        <EditText
            android:layout_width="@dimen/ancho_standard"
            android:layout_height="wrap_content"
            android:id="@+id/editText_login_usuario"
            android:hint="@string/usuario"/>

        <EditText
            android:layout_width="@dimen/ancho_standard"
            android:layout_height="wrap_content"
            android:id="@+id/editText_login_clave"
            android:hint="@string/clave"
            android:inputType="textPassword"
            android:ems="10" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/ancho_standard"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:id="@+id/button_login_login"
            android:background="@color/botones_principales"
            android:onClick="irAMainActivity" />

        <!--<CheckBox-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/recordar_sesion"-->
            <!--android:id="@+id/checkBox_login_recordarSesion" />-->

        <TextView
            android:layout_width="@dimen/ancho_standard"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView_login_mensaje"
            android:textColor="#ffff5a5b" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/crear_usuario"
        android:id="@+id/textView_login_crearUsuario"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:onClick="irACrearUsuario"
        android:textColor="@color/link_text_material_light" />

</RelativeLayout>
